# cascade-detector

./: .gitignore  00-READ-ME-FIRST.md  00_START_HERE.md  API_COVERAGE_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS.md  COMPREHENSIVE_TESTING_PLAN.md  CONTRIBUTING.md  DELIVERABLES.md  DEPLOYMENT_GUIDE.md  FAQ.md  FEATURE_SHOWCASE.md  FINAL_STATUS_REPORT.md  FINAL_VALIDATION_SUMMARY.md  FUNDING.md  GITHUB_LAUNCH_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALLATION.md  JANUARY_7_LAUNCH_CHECKLIST.md  JANUARY_7_LAUNCH_TIMELINE.md  LAUNCH_COMPLETE_PACKAGE.md  LAUNCH_PACKAGE_INDEX.md  LAUNCH_STATUS.md  LAUNCH_SUMMARY.md  LICENSE  PRESS_RELEASE.md  PRODUCTHUNT_LAUNCH_TEMPLATE.md  PRODUCTION_READINESS_REPORT.md  PROJECT_SETUP.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REAL_WORLD_VALIDATION_REPORT.md  SECURITY.md  SOCIAL_MEDIA_CONTENT.md  SUPPORT.md  TECHNICAL_REPORT.md  TESTING_COMPLETE.md  (+18 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  tests.yml
cascade_detector/: __init__.py  orchestration.py
cascade_detector/agents/: __init__.py  discovery.py  propagation.py  remediator.py  verifier.py
cascade_detector/cli/: config.py  main.py
cascade_detector/core/: __init__.py  graphs.py  llm.py  patterns.py  scanner.py
tests/: __init__.py  test_discovery.py  test_propagation.py  test_remediator.py  test_verifier.py
